--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,3 +25,13 @@ nuget:
 
 skip_tags: false
 test: off
+
+deploy:
+
+  - provider: NuGet
+    api_key:
+      secure: 0mjb8vhWbGGoiUWJHX0qhUAEU5lrup9rEgEy/HBt5zpewF1suaBismyHHE53hTGu
+    artifact: /.*\.nupkg/
+    skip_symbols: false
+    on:
+      appveyor_repo_tag: true
