--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,7 @@ deploy:
   - provider: NuGet
     api_key:
       secure: 0mjb8vhWbGGoiUWJHX0qhUAEU5lrup9rEgEy/HBt5zpewF1suaBismyHHE53hTGu
-    artifact: /.*\.nupkg/
+    artifact: /.*\.s?nupkg/
     skip_symbols: false
     on:
       appveyor_repo_tag: true
