--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ deploy:
   - provider: NuGet
     api_key:
       secure: 0mjb8vhWbGGoiUWJHX0qhUAEU5lrup9rEgEy/HBt5zpewF1suaBismyHHE53hTGu
-    artifact: /.*\.nupkg/
+    artifact: /.*\.*nupkg/
     skip_symbols: false
     on:
       appveyor_repo_tag: true
