Workaround build parallelism issue
Work around file lock issues with parallel builds.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -41,6 +41,7 @@
     <SignAssembly>true</SignAssembly>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <UseSharedCompilation>false</UseSharedCompilation>
     <AssemblyVersion>0.3.0.0</AssemblyVersion>
     <VersionPrefix>0.3.1</VersionPrefix>
     <VersionPrefix Condition=" $(GITHUB_REF.StartsWith(`refs/tags/v`)) ">$(GITHUB_REF.Replace('refs/tags/v', ''))</VersionPrefix>
