Publish build artifacts
Publish the build artifacts when the build is completed.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,10 @@ jobs:
         DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
         NUGET_XMLDOC_MODE: skip
 
+    - name: Publish artifacts
+      uses: actions/upload-artifact@v1
+      with:
+        name: artifacts
+        path: /artifacts
+
 # TODO Publish NuGet package to feed
