Fix path for artifacts
Fix incorrect source path for uploaded artifacts.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,6 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: artifacts-${{ matrix.os_name }}
-        path: /artifacts
+        path: ./artifacts
 
 # TODO Publish NuGet package to feed
