Fix codecov upload
Fix code coverage not being uploaded to codecov.io due to incorrect file name being used.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
     - uses: codecov/codecov-action@v1
       name: Upload coverage to Codecov
       with:
-        file: ./artifacts/coverage.cobertura.xml
+        file: ./artifacts/coverage.netcoreapp3.1.cobertura.xml
         flags: ${{ matrix.os_name }}
 
     - name: Publish artifacts
