--- a/samples/MathsFunctions/MathsFunctions.csproj
+++ b/samples/MathsFunctions/MathsFunctions.csproj
@@ -6,7 +6,7 @@
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.1.1" />
-    <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.7.0" />
+    <PackageReference Include="Amazon.Lambda.RuntimeSupport" />
+    <PackageReference Include="Amazon.Lambda.Serialization.Json" />
   </ItemGroup>
 </Project>
