--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,5 +1,6 @@
 <Project>
   <ItemGroup>
+    <PackageVersion Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.0.0" />
     <PackageVersion Include="Amazon.Lambda.RuntimeSupport" Version="1.7.0" />
     <PackageVersion Include="Amazon.Lambda.Serialization.Json" Version="2.0.0" />
     <PackageVersion Include="coverlet.msbuild" Version="3.1.2" />
