--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -23,7 +23,7 @@
   </ItemGroup>
   <ItemGroup Condition=" '$(IsPackable)' != 'true' ">
     <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="3.1.30" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
-    <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="6.0.10" Condition=" '$(TargetFramework)' == 'net6.0' " />
+    <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="7.0.0-preview.1.22109.13" Condition=" '$(TargetFramework)' == 'net7.0' " />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" PrivateAssets="All" />
