--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,10 +18,10 @@
   </ItemGroup>
   <ItemGroup Condition=" '$(IsPackable)' == 'true' ">
     <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="6.0.0" Condition=" '$(TargetFramework)' == 'net6.0' " />
-    <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="7.0.0-preview.7.22376.6" Condition=" '$(TargetFramework)' == 'net7.0' " />
+    <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="7.0.0-rc.1.22427.2" Condition=" '$(TargetFramework)' == 'net7.0' " />
   </ItemGroup>
   <ItemGroup Condition=" '$(IsPackable)' != 'true' ">
-    <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="7.0.0-preview.7.22376.6" Condition=" '$(TargetFramework)' == 'net7.0' " />
+    <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="7.0.0-rc.1.22427.2" Condition=" '$(TargetFramework)' == 'net7.0' " />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" PrivateAssets="All" />
