--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -21,9 +21,10 @@
   <ItemGroup Condition=" '$(IsPackable)' == 'true' ">
     <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="6.0.0" Condition=" '$(TargetFramework)' == 'net6.0' " />
     <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="7.0.0" Condition=" '$(TargetFramework)' == 'net7.0' " />
+    <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="8.0.0-preview.1.23112.2" Condition=" '$(TargetFramework)' == 'net8.0' " />
   </ItemGroup>
   <ItemGroup Condition=" '$(IsPackable)' != 'true' ">
-    <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="7.0.8" Condition=" '$(TargetFramework)' == 'net7.0' " />
+    <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="8.0.0-preview.1.23112.2" Condition=" '$(TargetFramework)' == 'net8.0' " />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" PrivateAssets="All" />
