Enable CI for dotnet-vnext
Also run CI builds for the `dotnet-vnext` branch.

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, dotnet-vnext ]
   schedule:
     - cron: "0 6 * * MON"
   workflow_dispatch:
