--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -45,6 +45,7 @@
     <SignAssembly>true</SignAssembly>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <UseArtifactsOutput>true</UseArtifactsOutput>
     <UseSharedCompilation>false</UseSharedCompilation>
     <AssemblyVersion>0.7.0.0</AssemblyVersion>
     <VersionPrefix>0.7.2</VersionPrefix>
