--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@eaaf4bedf32dbdc6b720b63067d99c4d77d6047d # v3.1.4
       with:
-        file: ./artifacts/coverage.net7.0.cobertura.xml
+        file: ./artifacts/coverage/coverage.net7.0.cobertura.xml
         flags: ${{ matrix.os_name }}
 
     - name: Publish artifacts
@@ -72,6 +72,7 @@ jobs:
       with:
         name: packages-${{ matrix.os_name }}
         path: ./artifacts/packages
+        if-no-files-found: error
 
   validate-packages:
     needs: build
