Generate valid AWS X-Ray Trace IDs
Generate a valid format for the `Lambda-Runtime-Trace-Id` value so that it is not rejected when included in API requests to real AWS services, such as SQS.
Resolves #449.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,3 +17,6 @@ updates:
   reviewers:
     - "martincostello"
   open-pull-requests-limit: 99
+  ignore:
+    - dependency-name: "AWSSDK.SQS"
+      update-types: ["version-update:semver-patch"]
