--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -29,6 +29,10 @@
       TODO Remove NU5104 once .NET 8 reaches 8.0.0.
     -->
     <NoWarn>$(NoWarn);NU5104</NoWarn>
+    <!--
+      HACK Workaround for https://github.com/DotNetAnalyzers/StyleCopAnalyzers/issues/3687
+    -->
+    <NoWarn>$(NoWarn);SA1010</NoWarn>
     <NoWarn Condition=" '$(GenerateDocumentationFile)' != 'true' ">$(NoWarn);SA0001</NoWarn>
     <Nullable>enable</Nullable>
     <PackageIcon></PackageIcon>
