Add Amazon.Lambda.RuntimeSupport reference
Add an explicit reference to Amazon.Lambda.RuntimeSupport so the latest version is always used, rather than whatever the transitively referenced version is.

--- a/samples/MinimalApi/MinimalApi.csproj
+++ b/samples/MinimalApi/MinimalApi.csproj
@@ -6,5 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" />
+    <PackageReference Include="Amazon.Lambda.RuntimeSupport" />
   </ItemGroup>
 </Project>
