Make tests less flaky
Make some flaky tests in CI "less flaky" by using xRetry.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup Condition=" '$(IsTestProject)' == 'true' ">
     <Using Include="Shouldly" />
+    <Using Include="xRetry" />
     <Using Include="Xunit" />
     <Using Include="Xunit.Abstractions" />
   </ItemGroup>
