Update to .NET 8 (#403)
- Update to .NET 8.
- Fix new code analysis warnings.
- Use `UseArtifactsOutput=true` instead of explicitly setting the output path, as well as dropping explicit use of `--configuration` now that the default is `Release`.
- Remove Microsoft.SourceLink.GitHub as it is now included in the .NET SDK.
- Use primary constructors where relevant.
- Use collection literals where relevant.
- Remove some redundant suppressions.
- Apply some IDE suggestions.
- Simplify test by using `Parallel.ForAsnc()`.
- Add new `DisableMemoryLimitCheck` property for .NET 8 that sets the `AWS_LAMBDA_DOTNET_DISABLE_MEMORY_LIMIT_CHECK` environment variable to `true`.
- Use the new MSBuild terminal logger.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -26,6 +26,10 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <NeutralLanguage>en-US</NeutralLanguage>
     <NoWarn>$(NoWarn);CA1848</NoWarn>
+    <!--
+      HACK Workaround for https://github.com/DotNetAnalyzers/StyleCopAnalyzers/issues/3687
+    -->
+    <NoWarn>$(NoWarn);SA1010</NoWarn>
     <NoWarn Condition=" '$(GenerateDocumentationFile)' != 'true' ">$(NoWarn);SA0001</NoWarn>
     <Nullable>enable</Nullable>
     <PackageIcon></PackageIcon>
@@ -42,9 +46,10 @@
     <SignAssembly>true</SignAssembly>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <UseArtifactsOutput>true</UseArtifactsOutput>
     <UseSharedCompilation>false</UseSharedCompilation>
-    <AssemblyVersion>0.7.0.0</AssemblyVersion>
-    <VersionPrefix>0.7.2</VersionPrefix>
+    <AssemblyVersion>0.8.0.0</AssemblyVersion>
+    <VersionPrefix>0.8.0</VersionPrefix>
     <VersionSuffix Condition=" '$(VersionSuffix)' == '' AND '$(GITHUB_ACTIONS)' != '' ">preview.$(GITHUB_RUN_NUMBER)</VersionSuffix>
     <VersionPrefix Condition=" $(GITHUB_REF.StartsWith(`refs/tags/v`)) ">$(GITHUB_REF.Replace('refs/tags/v', ''))</VersionPrefix>
     <VersionSuffix Condition=" $(GITHUB_REF.StartsWith(`refs/tags/v`)) "></VersionSuffix>
