Update AWS SDKs monthly
Update the AWS SDK packages once a month.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,7 +22,21 @@ updates:
     - "martincostello"
   open-pull-requests-limit: 99
   ignore:
-    - dependency-name: "AWSSDK.SQS"
-      update-types: ["version-update:semver-patch"]
+    - dependency-name: "AWSSDK.*"
     - dependency-name: "Microsoft.AspNetCore.TestHost"
       versions: ["6.*", "7.*"]
+- package-ecosystem: nuget
+  directory: "/"
+  groups:
+    awssdk:
+      patterns:
+        - AWSSDK*
+  schedule:
+    interval: monthly
+    time: "05:30"
+    timezone: Europe/London
+  reviewers:
+    - "martincostello"
+  open-pull-requests-limit: 99
+  allow:
+    - dependency-name: "AWSSDK*"
