Add package icon
Add package icon based on Font Awesome's `bolt-lightning-solid`.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -27,7 +27,7 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <NeutralLanguage>en-US</NeutralLanguage>
     <Nullable>enable</Nullable>
-    <PackageIcon></PackageIcon>
+    <PackageIcon>package-icon.png</PackageIcon>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/martincostello/lambda-test-server</PackageProjectUrl>
     <PackageReadmeFile>package-readme.md</PackageReadmeFile>
