--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ permissions:
 jobs:
   build:
     name: ${{ matrix.os-name }}
-    runs-on: ${{ matrix.runnner }}
+    runs-on: ${{ matrix.runner }}
     timeout-minutes: 20
 
     outputs:
@@ -48,11 +48,11 @@ jobs:
       matrix:
         include:
           - os-name: macos
-            runnner: macos-latest
+            runner: macos-latest
           - os-name: linux
-            runnner: ubuntu-latest
+            runner: ubuntu-latest
           - os-name: windows
-            runnner: windows-latest
+            runner: windows-latest
 
     steps:
 
